--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         }
 
         .glass {
-            width: 80%;
-            height: 70%;
+            width: 350px;
+            height: 700px;
             backdrop-filter: blur(10px);
             /* The blur effect */
             background: rgb(183, 183, 183, 0.4);
