--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         }
 
         .glass {
-            width: 350px;
-            height: 700px;
+            width: 300px;
+            height: 600px;
             backdrop-filter: blur(10px);
             /* The blur effect */
             background: rgb(183, 183, 183, 0.4);
@@ -273,8 +273,8 @@
 </head>
 
 <body>
-    <div class="logo">
-    </div>
+    <!-- <div class="logo">
+    </div> -->
     <div class="sliderContainer">
 
         <div class="slider">
