--- a/index.html
+++ b/index.html
@@ -276,26 +276,28 @@
             display: inline-flex;
             align-items: center;
             justify-content: center;
-            background-color: #0084FF;
-            color: white;
+            background-color: #ffffff;
+            /* color: white;
             font-size: 16px;
             font-weight: bold;
-            padding: 10px 20px;
+            padding: 10px 20px; */
             border: none;
             border-radius: 50px;
             text-decoration: none;
             cursor: pointer;
             transition: background-color 0.3s;
+            position: absolute;
+            transform: translateY(-200%);
+            top: 100%;
         }
 
         .messenger-btn:hover {
-            background-color: #0063CC;
+            background-color: #000000;
         }
 
         .messenger-btn img {
-            width: 20px;
-            height: 20px;
-            margin-right: 10px;
+            width: 50px;
+            height: 50px;
         }
     </style>
 </head>
