--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
             width: 120px;
             height: 50px;
             position: absolute;
-            top: 100%;
-            transform: translateY(-150%);
+            top: 90%;
+            /* transform: translateY(-150%); */
             border: 1px solid black;
             border-radius: 15px;
             display: flex;
